--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8">
-    <title>Inscrire un titre ici</title>
+    <title>Le titre icic sera inscrit</title>
+    <!-- Le titre a été changé -->
     <!-- On peut avoir d'autres méta-données ici -->
   </head>
   <body>
