Ajout de "<h2> Au revoir ! </h2>"

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <!-- Ici, on placera tout le contenu à destination
     de l'utilisateur -->
     <h1> Bonjour ! </h1>
+    <h2> Au revoir ! </h2>
   </body>
 </html>
